2011/remarks/colmatrix.txt
2012.01.19.00.04.05

Задание 2. ОК.

Задание 3.

	(1) Что ж такое-то!? :) Что ж вы все такие суровые-то? Либо xor-ить
		весь dx, либо dh не устанавливать. Разве третьего не дано?
		Мы ж обсуждали на занятии, что в dl BIOS записывает номер
		диска, с которого производится загрузка. Ну обнулите Вы его,
		а если номер дисковода в системе не равен нулю?

		Вот пишу я:

			qemu-system-i386 bootbin

		и всё, ошибка загрузки, потому что теперь виртуальная машина
		загружает образ не с нулевого диска. Хорошо, конечно, что
		теперь выводится сообщение об ошибке у Вас, а не начинается
		апокалипсис

Задание 6.

	(1) cli и sti - это одинаковые инструкции по кодам и по семантике во
		всех режимах работы процессора. Зачем такие танцы с бубном
		вокруг этих инструкций? Кроме того, а почему Вы считаете, что
		процессору не может прилететь прерывание, после sti но до
		jmp (аккурат после установки бита в cr0)? И вот оно прилетит,
		а во всех регистрах у процессора каша. Вот он в итоге и
		превратит в кашу, допустим, все материалы по разработке
		средства от рака. Это двойной минус.

	(2) Ошибки, dh... Ну же. Вы разве сами не замечаете? Ведь, одни и те же
		требования постоянно. Если я просмотрел в прошлый раз, это ж
		не означает, что суслика там нет.

2012.01.23.17.35.53

Задание 2. Эх... Стало лучше, но...

	(1) Ведь, не компилируется. При чём разные компиляторы говорят одно и
		то же.

		$ g++ Task2.cpp -o ./t2
		Task2.cpp: In function ‘int main(int, char**)’:
		Task2.cpp:36:33: error: ‘itoa’ was not declared in this scope

		00.04 mike@0x02 ~/tmp/edu/2011/colmatrix
		$ clang++ Task2.cpp -o ./t2
		Task2.cpp:36:5: error: use of undeclared identifier 'itoa'
						itoa(fileNum++, fileName, 16);
						^
		1 error generated.

		Потому что:
		Portability. This function is not defined in ANSI-C and is not
		part of C++, but is supported by some compilers.

		Что вызывает вопрос о том, откуда взялся 3disasm.txt? :)

Задание 3. В целом, опять не так уж и плохо, но, ведь, всё равно, печальки...

	(1) Ошибки. fseek тоже может не сработать, как и system, как и read,
		как и т.д.

	(2) Чтение с дискетки может завершиться с ошибкой. И почему вы не
		устанавливаете dh (указатель головки) правильно?

	(3) У Вас file какой-то совсем странный. Пример программы для Linux.
		Как мне проверить, что всё работает? Как Вы проверяли?

Задание 5. ОК

Задание 6.

	(1) Переводите систему из одного режима работы в другой без запрета
		прерываний.
	
	(2) run.sh не работает:

		$ sh run.sh 
		nasm: fatal: unable to open input file `task6.asm'

		Не во всех системах имена файлов не чувствительны к регистру.

	Остальное нормально.

2012.01.17.16.15.44

Задание 2.

	(1) Не компилируется
	
		$ g++ Task2.cpp -o ./t2
		Task2.cpp: In function ‘int main(int, char**)’:
		Task2.cpp:34:33: error: ‘itoa’ was not declared in this scope
		Task2.cpp:43:15: error: ‘system’ was not declared in this scope

	(2) Длина записи числа d по основанию 16 действительно не будет
		превышать sizeof(d) * 2 + 1, но запись по основанию 10 может
		быть длиннее.

2012.01.17.02.07.19

Без изменений

2012.01.14.01.11.03

Без изменений

2012.01.11.20.32.04

Без изменений.

2012.01.01.19.19.14

Без изменений.

2011.12.27.19.25.26

Без изменений

2011.12.25.18.07.40

Задание 2. Смотрите замечания для pockerfaceOo

